authorquote fixed spacing

--- a/nathan.css
+++ b/nathan.css
@@ -50,7 +50,7 @@ div.author-quote {
 	margin: 0 0 15px auto;
 	right: 0;
 	width: 100%;
-	/* height: 118px; */
+	min-height: 118px;
 	overflow: hidden;
 	padding: 10px;
 }
@@ -95,13 +95,13 @@ div.author-quote blockquote {
 	position: relative;
 	bottom: 0;
 	left: -21px;
-	width: 58%;
+	width: 53%;
 	line-height: 17px;
 	font-size: 13px;
 	background: rgba(254, 214, 0, 0.3);
 	color: #5A5A5A !important;
 	z-index: 0;
-	padding: 3px 32px 3px 10px;    
+	padding: 3px 59px 3px 10px;    
 	font-style: italic;
 	top: 0;
 	border-radius: 7px;
